ci: add build cache

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,19 @@ go:
   - 1.10.x
   - master
 
+cache:
+ directories:
+   - $HOME/.cache/go-build
+   - $HOME/gopath/pkg/mod
+
+git:
+ depth: 10
+
+matrix:
+ fast_finish: true
+ allow_failures:
+   - go: master
+
 addons:
   apt:
     sources:
